; ModuleID = '/home/carl/AnghaBench/git/extr_archive-tar.c_git_tar_config.c'
source_filename = "/home/carl/AnghaBench/git/extr_archive-tar.c_git_tar_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"tar.umask\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"user\00", align 1
@tar_umask = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @git_tar_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @git_tar_config(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @strcmp(i8* %8, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %27, label %11

11:                                               ; preds = %3
  %12 = load i8*, i8** %6, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %22

14:                                               ; preds = %11
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @strcmp(i8* %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %14
  %19 = call i64 @umask(i64 0)
  store i64 %19, i64* @tar_umask, align 8
  %20 = load i64, i64* @tar_umask, align 8
  %21 = call i64 @umask(i64 %20)
  br label %26

22:                                               ; preds = %14, %11
  %23 = load i8*, i8** %5, align 8
  %24 = load i8*, i8** %6, align 8
  %25 = call i64 @git_config_int(i8* %23, i8* %24)
  store i64 %25, i64* @tar_umask, align 8
  br label %26

26:                                               ; preds = %22, %18
  store i32 0, i32* %4, align 4
  br label %32

27:                                               ; preds = %3
  %28 = load i8*, i8** %5, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = load i8*, i8** %7, align 8
  %31 = call i32 @tar_filter_config(i8* %28, i8* %29, i8* %30)
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %27, %26
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i64 @umask(i64) #1

declare dso_local i64 @git_config_int(i8*, i8*) #1

declare dso_local i32 @tar_filter_config(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
